--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,11 @@ services:
       MYSQL_ROOT_PASSWORD: wirebarley234
       TZ: Asia/Seoul
     ports:
-      - "3307:3307"
+      - "3307:3306"
     volumes:
       - mysql-data:/var/lib/mysql
     healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-uroot", "-proot1234" ]
+      test: [ "CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-uroot", "-pwirebarley234" ]
       interval: 5s
       timeout: 3s
       retries: 20
@@ -24,18 +24,17 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: app-api
-    restart: unless-stopped
+    ports:
+      - "6060:6060"
     depends_on:
       mysql:
         condition: service_healthy
+    networks:
+      - default
+    restart: unless-stopped
     environment:
-      SPRING_PROFILES_ACTIVE: local
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/wirebarley?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-      SPRING_DATASOURCE_USERNAME: wirebarley
-      SPRING_DATASOURCE_PASSWORD: wirebarley1234
       TZ: Asia/Seoul
-    ports:
-      - "6060:6060"
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/wirebarley?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:6060/api/health" ]
       interval: 10s
